<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_product_big"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/products_details_dialog_product_image" />
        </RelativeLayout>

        <TextView
            android:id="@+id/product_key_name"
            style="@style/product_key"
            android:text="@string/product_key_name" />

        <TextView
            android:id="@+id/product_value_name"
            style="@style/product_value"
            android:text="@string/product_value_def" />

        <TextView
            android:id="@+id/product_key_tags"
            style="@style/product_key"
            android:text="@string/product_key_tags" />

        <TextView
            android:id="@+id/product_value_tags"
            style="@style/product_value"
            android:text="@string/product_value_def" />

        <TextView
            android:id="@+id/product_key_id"
            style="@style/product_key"
            android:text="@string/product_key_id" />

        <TextView
            android:id="@+id/product_value_id"
            style="@style/product_value"
            android:text="@string/product_value_def" />

        <TextView
            android:id="@+id/product_key_price_in_cents"
            style="@style/product_key"
            android:text="@string/product_key_price_in_cents" />

        <TextView
            android:id="@+id/product_value_price_in_cents"
            style="@style/product_value"
            android:text="@string/product_value_def" />

        <TextView
            android:id="@+id/product_key_regular_price_in_cents"
            style="@style/product_key"
            android:text="@string/product_key_regular_price_in_cents" />

        <TextView
            android:id="@+id/product_value_regular_price_in_cents"
            style="@style/product_value"
            android:text="@string/product_value_def" />

    </LinearLayout>
</ScrollView>